Modifiche Iniziali. Inizializzazione Laravel Mix

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starter SASS</title>
-    <link rel="stylesheet" href="./dist/css/main.css">
+    <title>Painter Project</title>
+    <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 <body>
-
+    
     <!-- JS Include -->
     <script src=".dist/js/main.js"></script>
 </body>
