--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             <div class="contacts">
                 <ul class="cont-list">
                     <li>
-                        <i class="fas fa-phone-alt"></i> 1-877-582-6735
+                        <i class="fas fa-phone-alt"></i> <a href="#">1-877-582-6735</a>
                     </li>
                     <li>
-                        <i class="fas fa-comment-alt"></i> Chat
+                        <i class="fas fa-comment-alt"></i> <a href="#">Chat</a>
                     </li>
                     <li>
-                        <i class="fas fa-user-alt"></i> Sign In
+                        <i class="fas fa-user-alt"></i> <a href="#">Sign In</a>
                     </li>
                     <li>
-                        <i class="fas fa-shopping-cart"></i> Cart
+                        <i class="fas fa-shopping-cart"></i> <a href="#">Cart</a>
                     </li>
                     <li>
                         <select name="lang" id="lang" class="lang">
