--- a/index.html
+++ b/index.html
@@ -4,137 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painter Project</title>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css'/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 <body>
 
     <!-- Header -->
     <header>
-        <div class="container">
-
             <!-- Contacts -->
             <div class="contacts">
-                <ul class="cont-list">
-                    <li>
-                        <i class="fas fa-phone-alt"></i> <a href="#">1-877-582-6735</a>
-                    </li>
-                    <li>
-                        <i class="fas fa-comment-alt"></i> <a href="#">Chat</a>
-                    </li>
-                    <li>
-                        <i class="fas fa-user-alt"></i> <a href="#">Sign In</a>
-                    </li>
-                    <li>
-                        <i class="fas fa-shopping-cart"></i> <a href="#">Cart</a>
-                    </li>
-                    <li>
-                        <select name="lang" id="lang" class="lang">
-                            <option value="ENG">English</option>
-                            <option value="ITA">Italiano</option>
-                            <option value="DET">Detusch</option>
-                            <option value="FRA">French</option>
-                        </select>
-                    </li>
-                </ul>
+                <div class="container">
+                    <ul class="cont-list">
+                        <li>
+                            <i class="fas fa-phone-alt"></i> <a href="#">1-877-582-6735</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-comment-alt"></i> <a href="#">Chat</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-user-alt"></i> <a href="#">Sign In</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-shopping-cart"></i> <a href="#">Cart</a>
+                        </li>
+                        <li>
+                            <select name="lang" id="lang" class="lang">
+                                <option value="ENG">English</option>
+                                <option value="ITA">Italiano</option>
+                                <option value="DET">Detusch</option>
+                                <option value="FRA">French</option>
+                            </select>
+                        </li>
+                    </ul>
+                </div>
             </div>
     
             <!-- NavBar -->
             <nav class="site-menu">
-                <ul class="menu-list">
-                    <li>
-                        <img src="./img/logo_painter.png" alt="">
-                    </li>
-                    <li>
-                        Products
-                    </li>
-                    <li>
-                        Brushes
-                    </li>
-                    <li>
-                        Wacom Tablets
-                    </li>
-                    <li>
-                        Special Offers
-                    </li>
-                    <li>
-                        Free Trials
-                    </li>
-                    <li>
-                        Business
-                    </li>
-                    <li>
-                        Support
-                    </li>
-                    <li>
-                        Learning
-                    </li>
-                </ul>
+                <div class="container">
+                    <img src="./img/logo_painter.png" alt="">
+                    <ul class="menu-list">
+                        <li>
+                            Products
+                        </li>
+                        <li>
+                            Brushes
+                        </li>
+                        <li>
+                            Wacom Tablets
+                        </li>
+                        <li>
+                            Special Offers
+                        </li>
+                        <li>
+                            Free Trials
+                        </li>
+                        <li>
+                            Business
+                        </li>
+                        <li>
+                            Support
+                        </li>
+                        <li>
+                            Learning
+                        </li>
+                    </ul>
+                </div>
             </nav>
     
             <!-- HeroBox -->
             <div class="hero">
-                <div class="center-hero">
-                    <h3>Painter Essentials 7 (Windows/Mac)<small>Painting software for beginners</small></h4>
-                    <ul class="hero-list">
-                        <li>
-                            <i class="fas fa-chevron-right"></i> User-friendly interface
-                        </li>
-                        <li>
-                            <i class="fas fa-chevron-right"></i> AI-based photo painting
-                        </li>
-                        <li>
-                            <i class="fas fa-chevron-right"></i> Industry-acclaimed brushes
-                        </li>
-                        <li>
-                            <i class="fas fa-chevron-right"></i> Incredible speed
-                        </li>
-                        <li>
-                            <i class="fas fa-chevron-right"></i> Built-in learning
-                        </li>
-                    </ul>
-                    <button>download trial <small>for windows/mac</small><i class="fas fa-download"></i></button>
-                </div>
-                <div class="right-hero">
-                    <div class="price-box">
-                        <div class="left-price">
-                            $49.99
-                            <small>download</small>
-                        </div>
-                        <img src="./img/ico-30day-money-back-guarantee-en.png" alt="">
+                <div class="container">
+                    <div class="center-hero">
+                        <h3>Painter Essentials 7 (Windows/Mac)<small>Painting software for beginners</small></h4>
+                        <ul class="hero-list">
+                            <li>
+                                <i class="fas fa-chevron-right"></i> User-friendly interface
+                            </li>
+                            <li>
+                                <i class="fas fa-chevron-right"></i> AI-based photo painting
+                            </li>
+                            <li>
+                                <i class="fas fa-chevron-right"></i> Industry-acclaimed brushes
+                            </li>
+                            <li>
+                                <i class="fas fa-chevron-right"></i> Incredible speed
+                            </li>
+                            <li>
+                                <i class="fas fa-chevron-right"></i> Built-in learning
+                            </li>
+                        </ul>
+                        <button>download trial <small>for windows/mac</small><i class="fas fa-download"></i></button>
                     </div>
-                    <button class="btn btn-blue">buy now</button>
-                    <div class="grey-box">
-                        <h4>Limited-time offer</h4>
-                        <p>FREE Animations Essentials Brush Pack ($19.99 value)</p>
-                        <p>Learn More</p>
+                    <div class="right-hero">
+                        <div class="price-box">
+                            <div class="left-price">
+                                $49.99
+                                <small>download</small>
+                            </div>
+                            <img src="./img/ico-30day-money-back-guarantee-en.png" alt="">
+                        </div>
+                        <button class="btn btn-blue">buy now</button>
+                        <div class="grey-box">
+                            <h4>Limited-time offer</h4>
+                            <p>FREE Animations Essentials Brush Pack ($19.99 value)</p>
+                            <a>Learn More</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- FixedMenu -->
             <div class="fixed">
-                <ul class="fixed-menu">
-                    <li class="active">
-                        Overview
-                    </li>
-                    <li class="active">
-                        Features
-                    </li>
-                    <li class="active">
-                        Compare
-                    </li>
-                    <li class="active">
-                        Tech Specs
-                    </li>
-                    <li class="active">
-                        Gallery
-                    </li>
-                    <li class="active">
-                        Learning
-                    </li>
-                </ul>
+                <div class="container">
+
+                    <ul class="fixed-menu">
+                        <li class="active">
+                            Overview
+                        </li>
+                        <li class="active">
+                            Features
+                        </li>
+                        <li class="active">
+                            Compare
+                        </li>
+                        <li class="active">
+                            Tech Specs
+                        </li>
+                        <li class="active">
+                            Gallery
+                        </li>
+                        <li class="active">
+                            Learning
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
     </header>
 
     <!-- MAIN CONTENT -->
