--- a/index.html
+++ b/index.html
@@ -149,11 +149,13 @@
 
         <!-- Intro Section -->
         <section class="intro">
-            <div class="container">
+            <div class="intro-box">
                 <h2>The ideal painting software for beginners</h2>
-                <p>Start your creative journey with Painter® Essentials™ 7, the best paint program for beginners to explore and expand artistic curiosity using impressive, easy-to-learn tools. </p>
+                <p>Start your creative journey with Painter® Essentials™ 7, the best paint program for beginners to explore and expand<br>artistic curiosity using impressive, easy-to-learn tools. </p>
+            </div>
+            <div class="img-box">
                 <div class="guide-box">
-                    <img src="./img/ico-circle-pdf-grey.png" alt=""> Quick Start Guide (PDF)
+                    <img class="pdf-icon" src="./img/ico-circle-pdf-grey.png" alt=""> Quick Start Guide (PDF)
                 </div>
                 <img src="./img/intro-screen.png" alt="">
             </div>
@@ -177,7 +179,7 @@
         </section>
 
         <!-- Parallax space -->
-        <section class="parallax para-1">
+        <section class="para-1">
         </section>
 
         <!-- Painting Tools -->
@@ -204,7 +206,7 @@
         </section>
 
         <!-- Parallax space -->
-        <section class="parallax para-2">
+        <section class="para-2">
         </section>
         
         <!-- Inspire -->
